--- a/app/static/css/yarn_calculator.css
+++ b/app/static/css/yarn_calculator.css
@@ -416,12 +416,16 @@ input:checked + .slider:after {
   content: '';
   flex: 1;
   height: 1px;
-  background: var(--border-color);
+  background: var(--stroke-color);
 }
 
 .sample-divider span {
   padding: 0 1rem;
   background: var(--card-bg);
+  color: var(--text-color);
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin: 0 0 0.25rem 0;
 }
 
 .sample-images {
